--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   percent_indicator: ^4.2.3
   date_picker_timeline: ^1.2.3
   intl: ^0.17.0
+  get: ^4.6.5
+  get_storage: ^2.1.1
   
 
 dev_dependencies:
