--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get_storage: ^2.1.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_datetime_picker_plus: ^2.0.1
   
 
 dev_dependencies:
