--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,14 +42,14 @@ dependencies:
   intl: ^0.17.0
   get: ^4.6.5
   get_storage: ^2.1.1
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
   flutter_datetime_picker_plus: ^2.0.1
+  path_provider: ^2.0.15
+  
+  
   
 
 dev_dependencies:
-  hive_generator: ^2.0.0
-  build_runner: ^2.4.5
+
   flutter_test:
     sdk: flutter
 
