--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   get_storage: ^2.1.1
   flutter_datetime_picker_plus: ^2.0.1
   path_provider: ^2.0.15
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  
   
   
   
@@ -59,6 +62,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  isar_generator: ^3.1.0+1
+  build_runner: ^2.4.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
