--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   path_provider: ^2.0.15
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
+  awesome_notifications: ^0.7.4+1
+  
   
   
   
