--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   awesome_notifications: ^0.7.4+1
+  image_picker: ^1.0.0
   
   
   
